# TASAK

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  config.py  example-curated.yaml  pyproject.toml  pytest-ci.ini  requirements.txt  tasak.spec  tasak.yaml.backup
.github/workflows/: build-binaries.yml  publish.yml  test-build.yml  tests.yml
docs/: BINARY_RELEASES.md  MCP_Python_Client_Research.md  MCP_Server_Build_Use.md  PYPI_PUBLISHING.md  about.md  advanced_usage.md  basic_usage.md  feedback.md  publishing.md  setup.md  spec.md
docs/architecture/: README.md  daemon_architecture.md
docs/archive/: core_unification_plan.md
docs/final/: 00_about.md  01_setup.md  02_basic_usage.md  03_advanced_usage.md
docs/tasks/: 000-implementation-order.md  003-standardize-app-interface.md  003_cmd_app_runner.DONE.md  004-admin-commands.md  004_mcp_client_proxy.md  005-mcp-remote-pool.md  005_packaging.DONE.md  006_pre_commit_hooks.md  007-curated-mode-redesign.md  (+2 more)
examples/: mcp-remote-apps.yaml
pyinstaller-hooks/: hook-tasak.py
scripts/: dev.bat  dev.sh  install-completions.bat  install-completions.sh  publish.py
tasak/: admin_commands.py  app_runner.py  auth.py  config.py  create_command.py  curated_app.py  dynamic_registration.py  main.py  mcp_client.py  mcp_parser.py  mcp_real_client.py  mcp_remote_auth.py  mcp_remote_client.py  mcp_remote_pool.py  mcp_remote_runner.py
tests/: test_app_runner.py  test_auth.py  test_curated_app.py  test_dynamic_registration.py  test_mcp_remote_auth.py  test_mcp_remote_runner.py
(+29 files in other folders)
